--- a/styles.css
+++ b/styles.css
@@ -71,13 +71,41 @@ body {
     font-size: clamp(1.5rem, 2.5vw + 0.5rem, 3rem)
 }
 
+#delete_cards_modal, #small_modal {
+    width: 25vw;
+    max-width: 400px;
+    min-width: 375px;
+    height: 275px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+}
+
+#small_modal {
+    height: 175px;
+}
+
+#delete_cards_modal .modal_btn {
+    width: 100px;
+}
+
+#modal_bg {
+    position: fixed;
+    z-index: 2;
+    width: 100vw;
+    height: 100svh;
+    background-color: rgba(46, 46, 46, 0.342);
+}
+
 #loading_text {
     stroke: rgb(20, 20, 20);
     fill: transparent;
     animation: 3s cubic-bezier(0.95, 0.05, 0.795, 0.035) infinite alternate loading_animation;
     font-size: clamp(0.5rem, 1vw + 0.25rem, 0.75rem);
 }
-#loading_text2 {
+#loading_text2, #hahaha {
     font-size: clamp(0.25rem, 1vw + 0.25rem, 0.75rem);
     animation: 3s cubic-bezier(0.95, 0.05, 0.795, 0.035) infinite alternate fade_in;
 }
@@ -85,7 +113,9 @@ body {
     animation: 500ms ease-in-out zoom_out;
 }
 
-
+#hahaha {
+    font-size: 2rem;
+}
 
 @keyframes fade_in {
     0% {
